[gd_scene load_steps=2 format=3 uid="uid://bdf5g0rvq7q63"]

[ext_resource type="Script" uid="uid://bky37r5qmero4" path="res://addons/quest_weaver/ui/components/simple_condition_entry.gd" id="1_d26pr"]

[node name="SimpleConditionEntry" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d26pr")

[node name="KeyEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Key"

[node name="OperatorPicker" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "EQUALS"
popup/item_0/id = 0
popup/item_1/text = "NOT_EQUALS"
popup/item_1/id = 1
popup/item_2/text = "GREATER_THAN"
popup/item_2/id = 2
popup/item_3/text = "LESS_THAN"
popup/item_3/id = 3
popup/item_4/text = "GREATER_OR_EQUAL"
popup/item_4/id = 4
popup/item_5/text = "LESS_OR_EQUAL"
popup/item_5/id = 5
popup/item_6/text = "HAS"
popup/item_6/id = 6

[node name="ValueEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value"

[node name="RemoveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "X"
